--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ header .hero {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: 70vh;
+    /* height: 70vh; */
 }
 header .hero .div-home{
     display: flex;
@@ -92,5 +92,6 @@ header .article div p{
 
 }
 header .article div p a{
+font-size: 12px; 
 
 }
